Fixed toggle buttons causing things to shift at all screen sizes

--- a/src/App.scss
+++ b/src/App.scss
@@ -128,6 +128,11 @@ nav {
   cursor: pointer;
 }
 
+
+#add-skills .same-size-col{
+  min-width: 336px;
+}
+
 @media (min-width: 1200px){
   #add-skills .same-size-col{
     min-width: 506.5px;
